feat: documentação da autenticação de usuários
